--- a/package.json
+++ b/package.json
@@ -46,12 +46,15 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
     "eslint": "^8.1.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.26.1",
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.4.0",
+    "image-webpack-loader": "^8.0.1",
     "react-svg": "^14.0.17",
     "react-svg-loader": "^3.0.3",
     "sass": "^1.43.3",
