--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb"
+        "airbnb",
+        "plugin:react-hooks/recommended"
     ],
     "parser": "@babel/eslint-parser",
     "parserOptions": {
@@ -21,8 +22,6 @@
     ],
     "rules": {
         "react/prop-types" : "off",
-        "react/destructuring-assignment": "off",
-        "react/no-did-update-set-state": "off",
         "no-unused-expressions": "off",
         "no-console": "off"
     }
