lesson-38: add new block, Routes

--- a/package.json
+++ b/package.json
@@ -54,11 +54,13 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
+    "history": "^5.1.0",
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.4.0",
     "husky": "^7.0.4",
     "image-webpack-loader": "^8.0.1",
     "lint-staged": "^11.2.6",
+    "react-router-dom": "^6.0.2",
     "react-svg": "^14.0.17",
     "react-svg-loader": "^3.0.3",
     "sass": "^1.43.3",
