--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "rules": {
         "react/prop-types" : "off",
         "no-unused-expressions": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "import/no-extraneous-dependencies": "off"
     }
 }
