--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.2"
   },
   "scripts": {
     "start": "webpack-dev-server --config configs/webpack.dev.js",
@@ -60,6 +61,7 @@
     "husky": "^7.0.4",
     "image-webpack-loader": "^8.0.1",
     "lint-staged": "^11.2.6",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-svg": "^14.0.17",
     "react-svg-loader": "^3.0.3",
