--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,9 @@
         "react/prop-types" : "off",
         "no-unused-expressions": "off",
         "no-console": "off",
-        "import/no-extraneous-dependencies": "off"
+        "import/no-extraneous-dependencies": "off",
+        "react-hooks/exhaustive-deps": "off",
+        "max-len": "off",
+        "object-curly-newline": "off"
     }
 }
