--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "axios": "^0.24.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.5.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.1.5"
   },
   "scripts": {
